force-app/main/default/objects/CTM_Text_Message__c/CTM_Text_Message__c.object-meta.xml
<CustomObject>
    <label>CTM Text Message</label>
    <nameField>
        <displayFormat>SMS-{00000000}</displayFormat>
        <label>CTM SMS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CTM Text Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>