force-app/main/default/objects/CTM_Text_Message__c/fields/Chaser_Flow_Message__c.field-meta.xml
<CustomField>
    <fullName>Chaser_Flow_Message__c</fullName>
    <label>Chaser Flow Message</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Label Day 1</fullName>
            </value>
            <value>
                <fullName>Private Label Day 2</fullName>
            </value>
            <value>
                <fullName>Private Label Day 3</fullName>
            </value>
            <value>
                <fullName>Private Label Day 5</fullName>
            </value>
            <value>
                <fullName>Private Label Day 7</fullName>
            </value>
            <value>
                <fullName>Private Label Day 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>