force-app/main/default/objects/CTM_Text_Message__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CTM Text Messages</relationshipLabel>
    <relationshipName>CTM_Text_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>