force-app/main/default/objects/CTM_Text_Message__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact__c)), Contact__r.FirstName, IF(NOT(ISBLANK(Lead__c)), Lead__r.FirstName, &apos;&apos;))</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>