force-app/main/default/objects/CTM_Text_Message__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message after the greeting</description>
    <label>Message</label>
    <length>160</length>
    <type>Text</type>
</CustomField>