force-app/main/default/objects/CTM_Text_Message__c/fields/Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Body__c</fullName>
    <description>Part after the Greeting</description>
    <label>Message Body</label>
    <length>160</length>
    <type>Text</type>
</CustomField>