force-app/main/default/objects/CTM_Text_Message__c/fields/Prename_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Prename_Greeting__c</fullName>
    <defaultValue>&quot;Hi&quot;</defaultValue>
    <label>Prename Greeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hi</fullName>
            </value>
            <value>
                <fullName>Hey</fullName>
            </value>
            <value>
                <fullName>Aroma360</fullName>
            </value>
            <value>
                <fullName>HC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>