force-app/main/default/objects/CTM_Text_Message__c/fields/To_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Number__c</fullName>
    <description>Recipient Number - Lead&apos;s Phone, stored here as record</description>
    <label>To Number</label>
    <type>Phone</type>
</CustomField>