force-app/main/default/objects/CTM_Text_Message__c/listViews/Chaser_Queue_CTM_Text_Message.listView-meta.xml
<ListView>
    <fullName>Chaser_Queue_CTM_Text_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>Chaser Queue</label>
    <queue>Chaser_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>