force-app/main/default/objects/CTM_Text_Message__c/listViews/Dialer_Queue_CTM_Text_Message.listView-meta.xml
<ListView>
    <fullName>Dialer_Queue_CTM_Text_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>Dialer Queue</label>
    <queue>Dialer_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>